--- a/HeartProject.ipynb
+++ b/HeartProject.ipynb
@@ -1638,11 +1638,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "23d8fa48-1e51-4a76-89f2-95d69ab6a5bc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip freeze > requirements.txt"
+   ]
   },
   {
    "cell_type": "code",
