added new files to project

--- a/HeartProject.ipynb
+++ b/HeartProject.ipynb
@@ -1605,9 +1605,9 @@
     "import joblib\n",
     "\n",
     "# Save the trained model\n",
-    "joblib.dump(model, \"heart_disease_model.pkl\")\n",
+    "joblib.dump(model, \"model.pkl\")\n",
     "\n",
-    "print(\"Model saved as heart_disease_model.pkl\")"
+    "print(\"Model saved as model.pkl\")"
    ]
   },
   {
